some stuff is working. turns out selenium is not the answer in this case